2007-12-11  Alberto Ruiz <alberto.ruiz@sun.com>
	* Added Firefox 1.5 templates.

2007-30-10  Alberto Ruiz <alberto.ruiz@sun.com>
	* Initial commit. 