@@ -2,7 +2,14 @@ AC_INIT(apoc-template-packages, 0.6)
 
 AM_INIT_AUTOMAKE
 
+PKGSDIR=${datadir}/apoc/packages
+AC_SUBST(PKGSDIR)
+
 AC_OUTPUT([
 Makefile
 packages/Makefile
+packages/Gnome2.6_pkg/Makefile
+packages/Evolution1.4_pkg/Makefile
+packages/Firefox1.5_pkg/Makefile
+packages/StarOffice8_pkg/Makefile
 ])
