@@ -1,0 +1,12 @@
+evopkgdir=@PKGSDIR@/Evolution1.4_pkg
+
+evopkg_DATA = \
+	templates/Evolution1.4/Mail/mailTrash.xml \
+	templates/Evolution1.4/Mail/mailComposer.xml \
+	templates/Evolution1.4/Mail/mailDisplay.xml \
+	templates/Evolution1.4/Mail/mailNotifications.xml \
+	templates/Evolution1.4/Mail/mailFormat.xml \
+	templates/Evolution1.4/Mail/mailWarnings.xml \
+	templates/Evolution1.4/Calendar/calTasks.xml \
+	templates/Evolution1.4/Calendar/calDisplay.xml \
+	templates/Evolution1.4/View/viewViewPrefs.xml
