@@ -1,0 +1,22 @@
+ffoxpkgdir=@PKGSDIR@/Firefox1.5_pkg
+
+ffoxpkg_DATA = \
+	templates/Privacy/privSavedForms.xml \
+	templates/Privacy/privDownloadHistory.xml \
+	templates/Privacy/privCache.xml \
+	templates/Privacy/privPasswords.xml \
+	templates/Privacy/privHistory.xml \
+	templates/Privacy/privSettings.xml \
+	templates/Privacy/privCookies.xml \
+	templates/Advanced/advUpdate.xml \
+	templates/Advanced/advGeneral.xml \
+	templates/Advanced/advSecurity.xml \
+	templates/Tabs/Tabs.xml \
+	templates/Downloads/Downloads.xml \
+	templates/General/genConfigureProxies.xml \
+	templates/General/genHomePage.xml \
+	templates/General/genDefaultBrowser.xml \
+	templates/Content/conJavaScriptAdvanced.xml \
+	templates/Content/conGeneral.xml \
+	templates/Content/conColors.xml \
+	templates/Content/conFonts.xml
