@@ -1,0 +1,28 @@
+gnomepkgdir=@PKGSDIR@/Gnome2.6_pkg
+
+gnomepkg_DATA = \
+	templates/Gnome2.6/RemoteAccess/remoteAccess.xml \
+	templates/Gnome2.6/Keyboard/accessibility.xml \
+	templates/Gnome2.6/Keyboard/keyboardBehavior.xml \
+	templates/Gnome2.6/Keyboard/windowShortcuts.xml \
+	templates/Gnome2.6/Keyboard/desktopShortcuts.xml \
+	templates/Gnome2.6/Keyboard/workspaceShortcuts.xml \
+	templates/Gnome2.6/Keyboard/commandShortcuts.xml \
+	templates/Gnome2.6/Mouse/mouse.xml \
+	templates/Gnome2.6/FolderOptions \
+	templates/Gnome2.6/FolderOptions/folderOptions.xml \
+	templates/Gnome2.6/FolderOptions/folderPreview.xml \
+	templates/Gnome2.6/FolderOptions/folderBehavior.xml \
+	templates/Gnome2.6/Lockdown/desktopLockdown.xml \
+	templates/Gnome2.6/InternetOptions \
+	templates/Gnome2.6/InternetOptions/internetOptions.xml \
+	templates/Gnome2.6/Advanced/panels.xml \
+	templates/Gnome2.6/Advanced/sessions.xml \
+	templates/Gnome2.6/Advanced/preferredApplications.xml \
+	templates/Gnome2.6/CDDeviceOptions/CDDeviceOptions.xml \
+	templates/Gnome2.6/Display/windows.xml \
+	templates/Gnome2.6/Display/displayMenus.xml \
+	templates/Gnome2.6/Display/displayScreen.xml \
+	templates/Gnome2.6/Display/theme.xml \
+	templates/Gnome2.6/Display/background.xml \
+	templates/Gnome2.6/Display/font.xml
