@@ -1,0 +1,60 @@
+sopkgdir=@PKGSDIR@/StarOffice8_pkg
+
+sopkg_DATA = \
+	templates/StarOffice8/Drawing/drawPrint.xml \
+	templates/StarOffice8/Drawing/drawGeneral.xml \
+	templates/StarOffice8/Drawing/drawView.xml \
+	templates/StarOffice8/Drawing/drawGrid.xml \
+	templates/StarOffice8/Spreadsheet/ssView.xml \
+	templates/StarOffice8/Spreadsheet/ssCalculate.xml \
+	templates/StarOffice8/Spreadsheet/ssGrid.xml \
+	templates/StarOffice8/Spreadsheet/ssGeneral.xml \
+	templates/StarOffice8/Spreadsheet/ssPrint.xml \
+	templates/StarOffice8/Spreadsheet/ssChanges.xml \
+	templates/StarOffice8/HTMLDocument/htmlBackground.xml \
+	templates/StarOffice8/HTMLDocument/htmlGrid.xml \
+	templates/StarOffice8/HTMLDocument/htmlPrint.xml \
+	templates/StarOffice8/HTMLDocument/htmlView.xml \
+	templates/StarOffice8/HTMLDocument/htmlFormatAids.xml \
+	templates/StarOffice8/HTMLDocument/htmlTable.xml \
+	templates/StarOffice8/LoadSave/lsMSOffice.xml \
+	templates/StarOffice8/LoadSave/lsHTML.xml \
+	templates/StarOffice8/LoadSave/lsGeneral.xml \
+	templates/StarOffice8/LoadSave/lsVBA.xml \
+	templates/StarOffice8/Presentation/presGeneral.xml \
+	templates/StarOffice8/Presentation/presPrint.xml \
+	templates/StarOffice8/Presentation/presGrid.xml \
+	templates/StarOffice8/Presentation/presView.xml \
+	templates/StarOffice8/LanguageSettings/lsLanguages.xml \
+	templates/StarOffice8/LanguageSettings/lsJapaneseSearch.xml \
+	templates/StarOffice8/LanguageSettings/lsAsianLayout.xml \
+	templates/StarOffice8/LanguageSettings/lsCTL.xml \
+	templates/StarOffice8/LanguageSettings/lsWritingAids.xml \
+	templates/StarOffice8/TextDocument/textFonts.xml \
+	templates/StarOffice8/TextDocument/textFormatAids.xml \
+	templates/StarOffice8/TextDocument/textChanges.xml \
+	templates/StarOffice8/TextDocument/textPrint.xml \
+	templates/StarOffice8/TextDocument/textCTLFonts.xml \
+	templates/StarOffice8/TextDocument/textMailMerge.xml \
+	templates/StarOffice8/TextDocument/textView.xml \
+	templates/StarOffice8/TextDocument/textGeneral.xml \
+	templates/StarOffice8/TextDocument/textTable.xml \
+	templates/StarOffice8/TextDocument/textGrid.xml \
+	templates/StarOffice8/TextDocument/textAsianFonts.xml \
+	templates/StarOffice8/Internet/intProxy.xml \
+	templates/StarOffice8/Internet/intMail.xml \
+	templates/StarOffice8/StarOffice/soAppearance.xml \
+	templates/StarOffice8/StarOffice/soGeneral.xml \
+	templates/StarOffice8/StarOffice/soSecurity.xml \
+	templates/StarOffice8/StarOffice/soPrint.xml \
+	templates/StarOffice8/StarOffice/soMemory.xml \
+	templates/StarOffice8/StarOffice/soPaths.xml \
+	templates/StarOffice8/StarOffice/soFonts.xml \
+	templates/StarOffice8/StarOffice/soView.xml \
+	templates/StarOffice8/StarOffice/soAccessibility.xml \
+	templates/StarOffice8/StarOffice/soUserData.xml \
+	templates/StarOffice8/Advanced/advDisableCommands.xml \
+	templates/StarOffice8/Advanced/advImportUserProfile.xml \
+	templates/StarOffice8/Advanced/advGeneral.xml \
+	templates/StarOffice8/Advanced/advDefaultTemplates.xml \
+	templates/StarOffice8/Formula/formSettings.xml
